--- a/.github/workflows/pain.yml
+++ b/.github/workflows/pain.yml
@@ -20,6 +20,5 @@ jobs:
           aws-region: ap-southeast-1
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./Static-S3/StaticWebsitetoS3-main
-/website/ s3://my-second-bucket-12 --delete
+        run: aws s3 sync ./Static-S3/StaticWebsitetoS3-main/website/ s3://my-second-bucket-12 --delete
 
